# Data-Analyze-MCP

./: .gitignore  LICENSE  README.ko.md  README.md  data_client.py  generate_all_test_data.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data_analysis/: __main__.py  fonts.py  server.py
data_analysis/tools/: __init__.py  exploration.py  feature_engineering.py  ml.py  visualization.py
docs/: LLM_INTEGRATION.ko.md  LLM_INTEGRATION.md
examples/: demo_session.py  maritime_case_study.py
examples/data/: kmst_accidents.csv
scripts/: generate_demo_images.py
src/data_analysis/: __init__.py  cache.py  config.py  helpers.py  palette_check.py  prompts.py  server.py  theming.py  viewer.py
src/data_analysis/tools/: __init__.py  auto_viz.py  composition.py  distribution.py  exploration.py  ml.py  preprocessing.py  results.py  statistics.py  style.py  visualization.py
tests/: conftest.py  test_auto_viz.py  test_edge_cases.py  test_ml_stats.py  test_new_charts.py  test_palettes.py  test_preprocessing.py  test_server_and_results.py  test_visualization.py
