[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analysis-mcp"
version = "3.2.0"
description = "FastMCP server exposing data exploration, preprocessing, visualization, ML and statistics tools"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
data-analysis = "data_analysis.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
