[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analysis-mcp"
version = "3.2.0"
description = "FastMCP server exposing data exploration, preprocessing, visualization, ML and statistics tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
data-analysis = "data_analysis.__main__:main"
data-analysis-viewer = "data_analysis.viewer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Default correctness rules; style stays with the codebase conventions.
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
